--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -1,92 +1,97 @@
 .form-control {
    position: relative;
-   margin-bottom: 24px;
- }
- 
- .input,
- .select,
- .textarea {
+   margin-bottom: 40px;
+}
+
+.input,
+.select,
+.textarea {
    width: 100%;
-   border: 1px solid black;
-   padding: 10px;
-   background-color: #fff;
-   color: #666;
+   border: 1px solid #DDDADA;
+   padding: 10px 5px 10px 68px;
+   background-color: $white;
+   color: $gray;
    margin: 0;
    border-radius: 0;
    font-size: inherit;
- }
- .input {
-   height: 40px;
- }
- 
- .input:focus,
- .select:focus,
- .textarea:focus {
+}
+
+
+.input {
+   height: 60px;
+   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+   border-radius: 5px;
+}
+
+.input:focus,
+.select:focus,
+.textarea:focus {
    outline: none;
    background-color: #fff;
    color: #666;
-   border-color: blue;
- }
- 
- .input:disabled,
- .select:disabled,
- .textarea:disabled {
+   border-color: $blue;
+}
+
+.input:disabled,
+.select:disabled,
+.textarea:disabled {
    background-color: #f8f8f8;
    color: #999;
    border-color: #999;
- }
- 
- .input::placeholder,
- .textarea::placeholder {
-   color: #999;
- }
- 
- .textarea {
+}
+
+.input::placeholder,
+.textarea::placeholder {
+   color: $gray;
+}
+
+.textarea {
    resize: none;
    height: 200px;
- }
- 
- .input-danger,
- .input-danger:focus {
+}
+
+.input-danger,
+.input-danger:focus {
    color: red;
    border-color: red;
- }
- 
- .input-success,
- .input-success:focus {
+}
+
+.input-success,
+.input-success:focus {
    color: green;
    border-color: green;
- }
- 
- .input-blank {
+}
+
+.input-blank {
    background-color: none;
    border-color: transparent;
- }
- .input-blank:focus {
+}
+
+.input-blank:focus {
    background-color: #e5e5e5;
    border-style: dashed;
- }
- 
- .form-error-message {
+}
+
+.form-error-message {
    color: red;
    position: absolute;
    bottom: -16px;
    display: none;
- }
- 
- .input:valid:not(:placeholder-shown) {
+}
+
+.input:valid:not(:placeholder-shown) {
    border-color: green;
- }
- 
- .input:invalid:not(:placeholder-shown) {
+}
+
+.input:invalid:not(:placeholder-shown) {
    border-color: red;
- }
- 
- .input:invalid:not(:placeholder-shown) + .form-error-message {
+}
+
+.input:invalid:not(:placeholder-shown)+.form-error-message {
    display: block;
- }
- 
- .form-icon {
+}
+
+.form-icon {
    position: absolute;
    top: 0;
    bottom: 0;
@@ -97,25 +102,25 @@
    align-items: center;
    justify-content: center;
    text-decoration: none;
- }
- 
- .form-icon:hover {
+}
+
+.form-icon:hover {
    color: #666;
- }
- 
- .form-icon:not(a):not(button):not(input) {
+}
+
+.form-icon:not(a):not(button):not(input) {
    pointer-events: none;
- }
- 
- .form-icon-flip {
+}
+
+.form-icon-flip {
    right: 0;
    left: auto;
- }
- 
- .form-icon:not(.form-icon-flip) ~ .input {
+}
+
+.form-icon:not(.form-icon-flip)~.input {
    padding-left: 40px !important;
- }
- .form-icon-flip ~ .input {
+}
+
+.form-icon-flip~.input {
    padding-right: 40px !important;
- }
- 
+}
