--- a/styles/components/_base.scss
+++ b/styles/components/_base.scss
@@ -2,14 +2,20 @@
    box-sizing: border-box;
 }
 
+$dark: #000000;
+$white: #FFFFFF;
+$gray: #767272;
+$blue: #0E49B5;
+
 html {
    font-size: 14px;
    font-weight: 400;
-   font-family: "Roboto", sans-serif;
-   background-color: #ffffff;
-   line-height: 18px;
-   color: #5c646e;
+   font-family: 'Roboto', sans-serif;
+   background-color: $white;
+   line-height: 16px;
+   color: $dark;
 }
+
 
 .wrapper {
    position: relative;
@@ -17,7 +23,7 @@ html {
 }
 
 .container {
-   max-width: 980px;
+   max-width: 1056px;
    padding: 0 16px;
    margin: 0 auto;
 }
@@ -27,8 +33,8 @@ html {
 }
 
 a {
-   color: #ff1744;
-   text-decoration: underline;
+   text-decoration: none;
+   cursor: pointer;
 }
 
 a:hover {
@@ -46,13 +52,13 @@ p,
 ul,
 ol,
 figure {
-   margin: 0 0 16px 0;
+   margin: 0 0 10px 0;
 }
 
 *+p,
 *+ul,
 *+ol *+figure {
-   margin-top: 16px;
+   margin-top: 0px;
 }
 
 h1,
