--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -3,8 +3,9 @@
    margin: 0;
    border-radius: 0;
    border: 1px solid transparent;
-   font-size: 14px;
-   padding: 8px 16px;
+   font-size: 20px;
+   line-height: 23px;
+   padding: 14px 26px;
    outline: none;
    text-transform: none;
    text-align: center;
@@ -12,44 +13,79 @@
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
- }
- .button:hover {
+   border-radius: 5px;
+   transition: all 1s;
+   cursor: pointer;
+}
+
+.button:hover {
    text-decoration: none;
- }
- .button:focus {
+}
+
+.button:focus {
    outline: none;
- }
- 
- .button-primary {
-   color: #ffffff;
-   background-color: green;
- }
- 
- .button-primary:hover {
-   color: green;
-   background-color: #ffffff;
-   border-color: green;
- }
- .button-danger {
+}
+
+.button-primary {
+   color: $white;
+   background-color: $blue;
+}
+
+.button-primary:hover {
+   color: $blue;
+   background-color: $white;
+   border-color: $blue;
+}
+
+.button-danger {
    color: #ffffff;
    background-color: red;
- }
- 
- .button-danger:hover {
+}
+
+.button-danger:hover {
    color: red;
    background-color: #ffffff;
    border-color: red;
- }
- 
- .button-large {
+}
+
+.button-large {
    padding: 22px 64px;
- }
- 
- .button-medium {
+}
+
+.button-medium {
    padding: 12px 24px;
- }
- 
- .button-full {
+}
+
+.button-full {
    width: 100%;
- }
- 
+}
+
+.filter__button,
+.settings_button {
+   position: absolute;
+   top: 10px;
+   border-radius: 50%;
+   padding: 10px;
+   border: 0;
+   background-color: $blue;
+   cursor: pointer;
+   color: $white;
+   transition: all 1s;
+   width: 40px;
+}
+
+.filter__button {
+   right: 57px;
+}
+
+.settings_button {
+   right: 5px;
+}
+
+
+
+.filter__button:hover,
+.settings_button:hover {
+   background-color: rgb(56, 127, 194);
+   transition: all 1s;
+}
