--- a/styles/components/_fonts.scss
+++ b/styles/components/_fonts.scss
@@ -1,8 +1,1 @@
-@font-face {
-   font-family: "Roboto";
-   src: url("../../fonts/roboto-regular-webfont.woff2") format("woff2"),
-     url("../../fonts/roboto-regular-webfont.woff") format("woff");
-   font-weight: normal;
-   font-style: normal;
- }
- 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Roboto:wght@400;700&display=swap');
