--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import "components/base";
 @import "components/normalize";
+@import "components/header";
 @import "components/nav";
 @import "components/hero";
 @import "components/section";
