--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -33,9 +33,9 @@
    }
 
    &__image {
-      height: 100%;
-      display: flex;
-      align-items: center;
+      width: 200px;
+      height: 200px;
+      margin: 0 auto;
    }
 
    &__description {
