--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -34,8 +34,10 @@
 
    &__image {
       width: 200px;
-      height: 200px;
+      height: 100%;
       margin: 0 auto;
+      display: flex;
+      align-items: center;
    }
 
    &__description {
