--- a/styles/components/_section.scss
+++ b/styles/components/_section.scss
@@ -66,3 +66,112 @@ label>input {
    flex-direction: column;
    width: 50%;
 }
+
+.overlay {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: 100vh;
+   background: #E2E2E288;
+}
+
+.modal-container {
+   background: white;
+   width: 83%;
+   height: 500px;
+   opacity: 1;
+   position: absolute;
+   top: 50%;
+   right: 50%;
+   transform: translate(49%, -49%);
+   display: flex;
+
+}
+
+.modal-image {
+   width: 200px;
+   height: 200px;
+   margin: auto;
+}
+
+.modal-img,
+.modal-control {
+   height: 100%;
+   width: 30%;
+   display: flex;
+   border: 1px solid #E2E2E2;
+}
+
+.modal-body {
+   width: 40%;
+   border: 1px solid #E2E2E2;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   min-width: 320px;
+}
+
+.modal-reviews {
+   height: 90px;
+   width: 300px;
+   position: relative;
+   overflow: hidden;
+   background: #DAE2EA;
+   border-radius: 10px;
+   display: flex;
+   justify-content: space-between;
+   margin: 20px auto;
+}
+
+.info {
+   width: 300px;
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   align-content: flex-start;
+}
+
+.info>span {
+   margin: 5px
+}
+
+span.modal-title {
+   width: 300px;
+   margin-top: 30px;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 28px;
+
+   color: #3B3E66;
+}
+
+.modal-control {
+   height: 100%;
+   width: 30%;
+   display: flex;
+   border: 1px solid #E2E2E2;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.modal-control>span {
+   padding-bottom: 25px;
+}
+
+.modal-image {
+   object-fit: contain;
+}
+
+.modal-price {
+   font-weight: 700;
+   font-size: 36px;
+   line-height: 42px;
+   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
+.display-none {
+   display: none;
+}
